--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,8 +118,17 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="goldenfish_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\goldenfish-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="octopus_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\octopus-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="shark_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shark-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Snail_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Snail-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="starfish_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\starfish-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
